--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Rings</title>
 </head>
 <body>
-    
+    <div class="ring">
+        <i style="--clr:#00ff0a;"></i>
+        <i style="--clr:#ff0057;"></i>
+        <i style="--clr:#fffd44;"></i>
+    </div>
 </body>
 </html>
