--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
         <i style="--clr:#00ff0a;"></i>
         <i style="--clr:#ff0057;"></i>
         <i style="--clr:#fffd44;"></i>
+        <form action="" class="login">
+
+        </form>
     </div>
 </body>
 </html>
