--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
         <i style="--clr:#ff0057;"></i>
         <i style="--clr:#fffd44;"></i>
         <form action="" class="login">
-
+            <h2>Login</h2>
+            <div class="inputBx">
+                <input type="text" placeholder="Username">
+            </div>
         </form>
     </div>
 </body>
