--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel='stylesheet' href='index.css'>
     <title>Rings</title>
 </head>
+
 <body>
     <div class="ring">
         <i style="--clr:#00ff0a;"></i>
@@ -15,7 +18,18 @@
             <div class="inputBx">
                 <input type="text" placeholder="Username">
             </div>
+            <div class="inputBx">
+                <input type="password" placeholder="Password">
+            </div>
+            <div class="inputBx">
+                <input type="submit" value="Sign in">
+            </div>
+            <div class="links">
+                <a href="#">Forget Password</a>
+                <a href="#">Signup</a>
+            </div>
         </form>
     </div>
 </body>
+
 </html>
